feat: add input search

--- a/index.html
+++ b/index.html
@@ -53,11 +53,21 @@
         class="slider__item"
         style="background-image: url('images/sliderItem.jpg');"
       ></div>
-	</section>
-	
-	<section class="search">
-		
-	</section>
+    </section>
+
+    <section class="search">
+      <div class="search__inner">
+        <form class="search__form">
+          <label class="search__form-label">Поиск <br>аппартаментов</label>
+          <input
+            type="text"
+            class="search__form-input"
+            placeholder="Введите город"
+          />
+          <button class="search__form-button" type="submit">Найти</button>
+        </form>
+      </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
